# vox

./: .biff  .envrc  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .oo-audit.jsonl  .oo-baseline.json  .oo-coupling-audit.jsonl  .oo-coupling-baseline.json  .suppression-audit.jsonl  .suppression-baseline.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.md  RESUME.md  TESTING.md  assets  install.sh  prfaq.bib  prfaq.tex  pyproject.toml  vox-linux-issue.md
.beads/: README.md  config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/commands/: autopilot.md  recap-dev.md  say-dev.md
.cursor/: mcp.json
.ethos/: missions.jsonl
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
.punt-labs/ethos/: .vendored-manifest  CLAUDE.md  missions.jsonl
.punt-labs/vox/: vox.md
.vox/: config.md
commands/: ask-test-dev.md  music.md  mute.md  notify-dev.md  notify.md  recap-dev.md  recap.md  say-dev.md  say.md  speak-dev.md  speak.md  unmute.md  vibe.md  voice-dev.md  voice.md  vox-off.md  vox-on.md  vox.md
docs/: WORKFLOW.md  architecture-review-v1.4.md  architecture.fdb_latexmk  architecture.fls  architecture.tex  audio-programs-concept.md  audio-programs-per-vibe.md  audio-programs-phase1-design.md  audio-programs.tex  config-split-design.md  cursor-mcp-workspace-root.md  design-review-phase1.md  guide-remote-setup.md  logging-consolidation.md  logging-proposal.md  music-playlist.tex  music-set-rotation-design.md  oo-ratchet-improvements.md  rec-music-cli.md  remote-setup.md  remote-voxd-design.md  review.md  vibe-agent-driven.md  vibe-exit-code-design.md  vibe-exit-code.tex  vox-2594-log-rotation.tex  vox-2594-unified-log.md  vox-chunked-transfer.tex  vox-dvri-daemon-audio-host.md  vox-dvri-record-store.tex  vox-ig52-music-resilience.md  vox-notify.tex  vox-tnum-record-transport.md
docs/coes/: 2026-04-06-linux-silent-playback.md
docs/design/: design-config-split.md  design-music-set-rotation.md  design-remote-voxd.md
docs/oo-refactor/: STATUS.md  hidden-classes-analysis.md  music-package-design.md  music-scheduler-split-design.md  oo-design-assessment-v2.md  oo-design-report.md  oo-design-review.md  oo-execution-plan-v2.md  oo-execution-plan-v3.md  oo-refactoring-plan.md  package-restructure-design.md  phase1-step1-cache-key-design.md  phase1-step2-playback-result-design.md  phase1-step3-music-track-design.md  phase1-step4-hook-payload-design.md  phase2-step5-signal-design.md  providers-design.md  test-resolve-design.md
docs/testing/: manual-tests.md
docs/z-spec/: claude-code-vox.tex  vox-notify.fuzz  vox-notify.tex
hooks/: acknowledge.sh  farewell.sh  hooks.json  notify-permission.sh  notify.sh  pre-compact.sh  session-start.sh  signal.sh  state.sh  subagent.sh  suppress-output.sh  vibe-nudge.sh
scripts/: check-skill-permissions.sh  generate_chimes.py  release-plugin.sh  restore-dev-plugin.sh  run_coverage.py  run_metrics.py
src/punt_tts/: __init__.py  cli.py  core.py  ephemeral.py  installer.py  logging_config.py  output.py  playback.py  server.py  types.py  watcher.py
src/punt_vox/: __init__.py  __main__.py  api_key_resolver.py  append_log.py  applet.py  atomic_file.py  audio_migration.py  cache.py  chime.py  claude_md.py  cli.py  cli_io.py  cli_music.py  client.py  client_env.py  client_errors.py  client_gateway.py  client_sync.py  command_signal.py  config.py  core.py  daemon.py  daemon_restarter.py  desktop_install.py  dirs.py  doctor.py  ephemeral.py  frontmatter.py  guidance.py  hook_envelope.py  hook_payload.py  hooks.py  keys.py  log_append_handler.py  log_flush.py  log_format.py  log_handlers.py  log_sanitize.py  log_ship.py  log_wire.py  (+39 more)
tests/: _program_fakes.py  conftest.py  test_api_key_resolver.py  test_append_log.py  test_applet.py  test_atomic_file.py  test_audio_migration.py  test_cache.py  test_chunked.py  test_claude_md.py  test_cli.py  test_cli_io.py  test_cli_music.py  test_client.py  test_client_gateway.py  test_command_signal.py  test_config.py  test_config_isolation.py  test_control.py  test_core.py  test_coupling_ratchet.py  test_crash_logging.py  test_daemon.py  test_daemon_restarter.py  test_desktop_install.py  test_dirs.py  test_doctor.py  test_elevenlabs_music_provider.py  test_elevenlabs_provider.py  test_ephemeral.py  test_espeak_provider.py  test_frontmatter.py  test_guidance.py  test_hook_envelope.py  test_hook_payload.py  test_hook_scripts.py  test_hooks.py  test_installer.py  test_keys.py  test_log_append_handler.py  (+85 more)
tests/music/: conftest.py  test_control.py  test_filler.py  test_generator.py  test_list_handler.py  test_loop.py  test_next_handler.py  test_off_handler.py  test_on_handler.py  test_play_handler.py  test_playlist.py  test_pool.py  test_prompts.py  test_scheduler.py  test_scheduler_loop.py  test_store.py  test_vibe_handler.py
tests/programs/: conftest.py  test_active_context.py  test_album_id.py  test_album_tags.py  test_catalog.py  test_control_channel.py  test_control_signal.py  test_fill_guard.py  test_fill_outcome.py  test_fill_reconciler.py  test_fill_recorder.py  test_fill_signal.py  test_filler.py  test_format.py  test_guard.py  test_handlers.py  test_hex_token.py  test_identifiers.py  test_interrupt_race.py  test_invariants.py  test_loop.py  test_manifest.py  test_migrate.py  test_migration_report.py  test_mode.py  test_part.py  test_playback_health.py  test_playback_policy.py  test_playback_source.py  test_player.py  test_producer.py  test_program.py  test_properties.py  test_retry_machine.py  test_rotate_policy.py  test_select_handler.py  test_select_signal.py  test_selection.py  test_selection_playback.py  test_service.py  (+9 more)
tools/: generate_chimes.py  oo_coupling.py  oo_score.py  run_coverage.py  run_metrics.py  suppression_ratchet.py
tools/coupling/: __init__.py  audit.py  baseline.py  cli.py  compare.py  gitio.py  graph.py  imports.py  layout.py  metrics.py  outcome.py  packages.py  ratchet.py  report.py  scorer.py  (+2 more)
(+381 files in other folders)
