[project]
name = "punt-tts"
version = "0.1.0"
description = "Text-to-speech CLI, MCP server, and Claude Code plugin (ElevenLabs, AWS Polly, OpenAI)"
readme = "README.md"
authors = [{ name = "Punt Labs", email = "hello@punt-labs.com" }]
requires-python = ">=3.13"
license = "MIT"
keywords = [
    "tts",
    "text-to-speech",
    "mcp",
    "elevenlabs",
    "aws-polly",
    "openai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "boto3>=1.35.0",
    "boto3-stubs[polly]>=1.35.0",
    "botocore-stubs>=1.35.0",
    "click>=8.1.0",
    "elevenlabs>=2.0.0",
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "pydub>=0.25.0",
    "audioop-lts>=0.2.1",
]

[project.urls]
Homepage = "https://github.com/punt-labs/tts"
Repository = "https://github.com/punt-labs/tts"
"Bug Tracker" = "https://github.com/punt-labs/tts/issues"

[project.scripts]
tts = "punt_tts.cli:main"
tts-server = "punt_tts.server:run_server"

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "pyright>=1.1.390",
    "ruff>=0.9.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "punt_tts"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "RUF", # Ruff-specific rules
]
ignore = [
    "TC001",  # Move import into TYPE_CHECKING
    "TC003",  # Move standard lib import into TYPE_CHECKING
]

[tool.ruff.lint.isort]
known-first-party = ["punt_tts"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "pydub.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "elevenlabs.*"
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (requires provider API credentials)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
precision = 2
