[project]
name = "punt-vox"
version = "4.12.0"
description = "Text-to-speech CLI, MCP server, and Claude Code plugin (ElevenLabs, AWS Polly, OpenAI)"
readme = "README.md"
authors = [{ name = "Punt Labs", email = "hello@punt-labs.com" }]
requires-python = ">=3.13"
license = "MIT"
keywords = [
    "tts",
    "vox",
    "text-to-speech",
    "mcp",
    "elevenlabs",
    "aws-polly",
    "openai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "boto3>=1.35.0",
    "boto3-stubs[polly]>=1.35.0",
    "botocore-stubs>=1.35.0",
    "elevenlabs>=2.0.0",
    "mcp>=1.0.0",
    "mutagen>=1.47.0",
    "openai>=1.0.0",
    "pydub>=0.25.0",
    "audioop-lts>=0.2.1",
    "typer>=0.24.1",
    "websockets>=14.0",
]

[project.urls]
Homepage = "https://github.com/punt-labs/vox"
Repository = "https://github.com/punt-labs/vox"
"Bug Tracker" = "https://github.com/punt-labs/vox/issues"

[project.scripts]
vox = "punt_vox.__main__:app"
voxd = "punt_vox.voxd:entrypoint"

[project.optional-dependencies]
lux = ["punt-lux>=0.9.0"]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pyright>=1.1.400",
    "ruff>=0.13.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    # starlette.testclient prefers httpx2; without it, TestClient emits a
    # StarletteDeprecationWarning. Test-only — not a runtime dependency.
    "httpx2>=2.7.0",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "punt_vox"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit (security)
    "BLE",  # flake8-blind-except
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "A",    # flake8-builtins
    "ERA",  # flake8-eradicate (commented code)
    "PIE",  # flake8-pie
    "RSE",  # flake8-raise
    "ARG",  # flake8-unused-arguments
    "RET",  # flake8-return
    "PERF", # perflint
    "PTH",  # flake8-use-pathlib
    "ISC",  # flake8-implicit-str-concat
    "FBT",  # flake8-boolean-trap
    "C90",  # mccabe complexity
]
extend-select = ["PLC0415"]

ignore = [
    "TC001",  # Move import into TYPE_CHECKING - too aggressive
    "TC003",  # Move standard lib import into TYPE_CHECKING
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "S108", "S603", "S607", "T20", "SLF001", "ARG", "FBT", "PLC0415", "C901"]
"scripts/*" = ["T20", "S108", "S603", "S607", "PLC0415"]
"tools/*" = ["T20", "S603", "S607", "C901", "PERF403", "SIM102", "N806", "C420"]
"typings/*" = ["A002"]
"src/punt_vox/__main__.py" = ["T20", "PLC0415", "S603", "S607", "C901"]
"src/punt_vox/doctor.py" = ["PLC0415", "C901"]
"src/punt_vox/server.py" = ["PLC0415", "C901"]
"src/punt_vox/voxd/daemon.py" = ["PLC0415"]
"src/punt_vox/voxd/synthesis.py" = ["PLC0415"]
"src/punt_vox/voxd/health.py" = ["PLC0415"]
"src/punt_vox/voxd/speech_handlers.py" = ["C901"]
"src/punt_vox/client.py" = ["PLC0415", "C901"]
"src/punt_vox/hooks.py" = ["T20", "PLC0415", "S603", "S607", "S311"]
"src/punt_vox/types_synthesis.py" = ["C901"]
"src/punt_vox/paths.py" = ["PLC0415"]
"src/punt_vox/service/__init__.py" = ["PLC0415"]
"src/punt_vox/service/process.py" = ["S603", "S607"]
"src/punt_vox/service/launchd.py" = ["S603", "S607"]
"src/punt_vox/service/systemd.py" = ["S603", "S607"]
"src/punt_vox/service/installer.py" = ["PLC0415"]
"src/punt_vox/playback.py" = ["S603", "S607"]
"src/punt_vox/voices.py" = ["S311"]
"src/punt_vox/providers/__init__.py" = ["PLC0415", "S603", "S607"]
"src/punt_vox/providers/elevenlabs.py" = ["PLC0415"]
"src/punt_vox/providers/elevenlabs_music.py" = ["PLC0415"]
"src/punt_vox/providers/openai.py" = ["PLC0415"]
"src/punt_vox/providers/polly.py" = ["PLC0415"]
"src/punt_vox/providers/say.py" = ["S603", "S607"]
"src/punt_vox/providers/espeak.py" = ["S603", "S607"]
"src/punt_vox/providers/convert.py" = ["S603", "S607"]
"src/punt_vox/providers/local_play.py" = ["S603", "S607"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["punt_vox"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
mypy_path = "typings"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
enable_error_code = ["ignore-without-code"]

[[tool.mypy.overrides]]
module = "punt_lux.*"
ignore_missing_imports = true


[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = "error"
venvPath = "."
venv = ".venv"
extraPaths = ["."]

[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q -m 'not slow and not integration and not e2e'"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (requires provider API credentials)",
    "slow: marks tests as slow",
    "e2e: marks end-to-end tests requiring full stack",
]
filterwarnings = [
    # Upstream elevenlabs SDK bug: pydantic v1 compat on Python 3.14. Remove when elevenlabs ships a fix.
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3.14:UserWarning:elevenlabs\\.core\\.pydantic_utilities$",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
    # Protocol/abstract method stub bodies are unexecutable by definition.
    "^\\s*\\.\\.\\.\\s*$",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
